--- a/GuessIO.Application/Views/GuessView.xaml
+++ b/GuessIO.Application/Views/GuessView.xaml
@@ -1,20 +1,15 @@
 ﻿<russkyc:ModernWindow x:Class="org.russkyc.guessio.Views.GuessView"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:russkyc="clr-namespace:org.russkyc.moderncontrols;assembly=Russkyc.ModernControls.WPF"
-	xmlns:viewModels="clr-namespace:org.russkyc.guessio.ViewModels"
-	mc:Ignorable="d"
 	WindowStartupLocation="CenterScreen"
 	MinHeight="550" MinWidth="750"
 	Height="550" Width="750"
-	d:DataContext="{viewModels:GuessViewModel}"
 	Title="Guess.io" >
 	<Grid Background="{DynamicResource bg-000}">
 		<StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Center">
 			<Label Foreground="{DynamicResource fg-000}" FontSize="25" FontWeight="Medium" HorizontalAlignment="Center" Content="Guess the Word"></Label>
-			<ItemsControl ItemsSource="{Binding Letters}" HorizontalAlignment="Stretch" Margin="80,20,80,20">
+			<ItemsControl ItemsSource="{Binding Word.Letters}" HorizontalAlignment="Stretch" Margin="80,20,80,20">
 				<ItemsControl.ItemContainerStyle>
 					<Style>
 						<Setter Property="FrameworkElement.Margin" Value="2"/>
@@ -47,7 +42,7 @@
 							</DataTrigger>
 							<MultiDataTrigger>
 								<MultiDataTrigger.Conditions>
-									<Condition Binding="{Binding DataContext.Correct, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource FindAncestor, AncestorType=russkyc:ModernWindow}}" Value="True"/>
+									<Condition Binding="{Binding DataContext.Guessed, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource FindAncestor, AncestorType=russkyc:ModernWindow}}" Value="True"/>
 								</MultiDataTrigger.Conditions>
 								<MultiDataTrigger.EnterActions>
 									<BeginStoryboard>
@@ -114,7 +109,7 @@
 							</DataTrigger>
 							<MultiDataTrigger>
 								<MultiDataTrigger.Conditions>
-									<Condition Binding="{Binding DataContext.Correct, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource FindAncestor, AncestorType=russkyc:ModernWindow}}" Value="True"/>
+									<Condition Binding="{Binding DataContext.Guessed, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource FindAncestor, AncestorType=russkyc:ModernWindow}}" Value="True"/>
 								</MultiDataTrigger.Conditions>
 								<MultiDataTrigger.EnterActions>
 									<BeginStoryboard>
