--- a/GuessIO.Application/App.xaml
+++ b/GuessIO.Application/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="WordGuessApplication.App"
+﻿<Application x:Class="org.russkyc.guessio.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
